--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-	background: url("http://www.millionglitters.com/background/thumb/nice/nice-background-pattern-200.gif")
+	background: url("https://www.millionglitters.com/background/thumb/nice/nice-background-pattern-200.gif")
 }
 p{
 	font-family: "Times New Roman";
