--- a/index.css
+++ b/index.css
@@ -36,6 +36,30 @@ li a {
 	text-decoration: none;
 }
 
-li a:hover {
-	background-color: #111;
+
+.jumbotron h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0;
+  color: black;
+  font-weight: bold;
+
+}
+input, textarea {
+	width:100%;
+	background-color: skyblue;
+	border:1px solid black;
+	padding:10px;
+	margin-top:3px;
+	font-size:0.9em;
+	color: black;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+}
+
+.form{
+    display:block;
+     margin-top:20px;
+    letter-spacing:2px;
 }
