--- a/index.css
+++ b/index.css
@@ -41,7 +41,6 @@ li a {
   margin: 0;
   color: black;
   font-weight: bold;
-
 }
 input, textarea {
 	width:100%;
@@ -56,6 +55,12 @@ input, textarea {
     border-radius:3px;
 }
 
-body > div {
-    
+.img-with-text {
+    text-align: justify;
+    width: [width of img];
+}
+
+.img-with-text img {
+    display: block;
+    margin: 0 auto;
 }
